--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,13 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
-./.idea/
-
 # End of https://www.gitignore.io/api/webstorm
+.idea/bootcamp.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+
+.idea/
+
+npm-debug.log
