--- a/NodeJS/CustomMiddleWares_NPMlibs/package.json
+++ b/NodeJS/CustomMiddleWares_NPMlibs/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4"
   }
 }
