--- a/NodeJS/Authentication_Strategies/Exercise/package.json
+++ b/NodeJS/Authentication_Strategies/Exercise/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.6",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "mongodb": "^3.2.3",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
