--- a/NodeJS/Authentication_Strategies/Exercise/package.json
+++ b/NodeJS/Authentication_Strategies/Exercise/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongodb": "^3.2.3",
