--- a/NodeJS/Authentication_Strategies/Exercise/package.json
+++ b/NodeJS/Authentication_Strategies/Exercise/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.3",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
